--- a/employee-register/android/build.gradle
+++ b/employee-register/android/build.gradle
@@ -27,3 +27,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+subprojects {
+    afterEvaluate {
+        if (it.hasProperty("android")) {
+            it.android {
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_17
+                    targetCompatibility JavaVersion.VERSION_17
+                }
+            }
+        }
+    }
+}
