Refactor backend for Face Recognition API
- Updated Dockerfile to use slim Python image and adjusted working directory structure.
- Enhanced docker-compose.yml to include MySQL service and updated API service configurations.
- Created alembic configuration for database migrations and added necessary migration scripts.
- Implemented use cases for employee management and face recognition, adhering to hexagonal architecture.
- Developed services and repositories for employee and log management.
- Integrated DeepFace for facial recognition and updated related logic.
- Established authentication mechanism using JWT with introspection endpoint.
- Added comprehensive cURL scripts for testing API endpoints.
- Updated documentation to reflect changes in setup and usage instructions.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,17 @@
-FROM python:3.11-bullseye
-# Dependencias de compilación para dlib/face_recognition
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential cmake libopenblas-dev liblapack-dev libjpeg-dev \
-    && rm -rf /var/lib/apt/lists/*
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
-COPY . .
-# Crear carpeta de datos para SQLite
-RUN mkdir -p /app/data
-EXPOSE 8081
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8081"]
+# Use an official Python runtime as a parent image
+FROM python:3.11-slim
 
-# ------------------------------
-# Instrucciones para construir y subir la imagen Docker:
-#
-# 1. Construir la imagen Docker:
-#    docker build -t steelerp.azurecr.io/face_recognition_backend:latest .
-#
-# 2. Iniciar sesión en tu registro Docker (por ejemplo, Docker Hub o tu propio servidor):
-#    docker login
-#
-# 3. Subir la imagen al registro:
-#    docker push steelerp.azurecr.io/face_recognition_backend:latest
-#
-# ------------------------------
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the requirements file into the container at /app
+COPY ./requirements.txt /app/requirements.txt
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application's code into the container at /app
+COPY . /app
+
+# Command to run the application
+CMD ["uvicorn", "infrastructure.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
