feat: Refactor backend for facial recognition API with FastAPI
- Removed outdated README.pdf and updated README.md with installation instructions for Windows.
- Updated requirements.txt to include additional dependencies: opencv-python, alembic, python-dotenv, httpx, mysqlclient.
- Modified environment.ts to switch API base URL for local development.
- Added Dockerfile and devcontainer.json for consistent development environment using VS Code Dev Containers.
- Created launch.json and tasks.json for streamlined development and debugging in VS Code.
- Implemented Alembic for database migrations with initial migration scripts and configuration.
- Added comprehensive documentation for development setup, Docker usage, and database management.
- Established a structured plan for future enhancements and refactoring of the project.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
 fastapi
-dlib
 uvicorn[standard]
 face_recognition
 numpy
@@ -7,3 +6,7 @@ SQLAlchemy>=2
 pillow
 python-multipart
 opencv-python
+alembic
+python-dotenv
+httpx
+mysqlclient
