--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,29 @@
-
 services:
   api:
     build: .
     image: employee-backend:latest
     container_name: employee-backend
     ports:
-      - "8081:8081"
-    volumes:
-      - ./data:/app/data   # Persistir SQLite
+      - "8089:8081"
     restart: unless-stopped
+    depends_on:
+      - mysql
+    env_file:
+      - .env
+
+  mysql:
+    image: mysql:8
+    container_name: mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
