feat: Initial migration and setup for company management system
- Added first migration script to create database tables for companies, roles, users, warehouses, employees, tablets, and logs.
- Implemented CRUD operations for companies, roles, users, warehouses, tablets, employees, and reports.
- Configured OpenAPI/Swagger for API documentation with JWT authentication.
- Established service layer for handling business logic related to employees, reports, roles, tablets, users, and warehouses.
- Introduced dependency injection for database sessions and current user retrieval.
- Added validation and error handling for various endpoints.

--- a/backend/.devcontainer/Dockerfile
+++ b/backend/.devcontainer/Dockerfile
@@ -3,11 +3,12 @@ FROM python:3.11-bullseye
 # Dependencias de compilación para dlib/face_recognition
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential cmake libopenblas-dev liblapack-dev libjpeg-dev \
-    git curl vim \
+    git curl vim default-mysql-client\
     && rm -rf /var/lib/apt/lists/*
 
 # Crear carpeta de trabajo
 WORKDIR /app
+
 
 # Instalar dependencias de Python
 COPY requirements.txt .
