Add comprehensive tests for authentication, authorization, and role-based access control
- Implemented tests for user authentication including login success and failure scenarios.
- Added tests for user registration with role-based permissions for admin, manager, and employee.
- Created tests for user management functionalities such as listing, updating, and deleting users based on roles.
- Developed tests for company management operations including creation and updates by admin and manager roles.
- Included edge case tests for invalid and expired tokens, as well as duplicate username and email registrations.
- Established a unified testing setup for endpoints related to warehouses, employees, and role permissions.
- Ensured all protected endpoints require JWT authentication and validated the handling of invalid tokens.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,10 @@ python-jose[cryptography]
 bcrypt==4.0.1 
 passlib[bcrypt]
 pydantic[email]
+
+# Testing dependencies
+pytest
+pytest-asyncio
+pytest-cov
+coverage
+httpx
