feat: Implement multi-stage Docker build for Employee Face Recognition System
- Added multi-stage build in Dockerfile to separate frontend (Vue.js) and backend (Python).
- Updated Dockerfile to include necessary system dependencies for dlib and face_recognition.
- Integrated frontend build output into the backend image.
- Created .dockerignore to optimize build context by excluding unnecessary files.
- Enhanced documentation with quick start, build commands, and deployment guides in readme.md and new markdown files.
- Added health check to Dockerfile for improved container monitoring.
- Introduced build scripts for both Windows and Unix-like systems to streamline the build process.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,63 @@
-FROM python:3.11-bullseye
-# Dependencias de compilación para dlib/face_recognition
+# Multi-stage build for Employee Face Recognition System
+# Stage 1: Build admin-panel (Vue.js frontend)
+FROM node:18-alpine AS frontend-builder
+
+WORKDIR /app/admin-panel
+
+# Copy package files for dependency installation
+COPY admin-panel/package*.json ./
+
+# Install all dependencies (including devDependencies for build)
+RUN npm ci
+
+# Copy admin-panel source code and build
+COPY admin-panel/ ./
+RUN npm run build
+
+# Stage 2: Python backend with integrated frontend
+FROM python:3.11-bullseye AS backend
+
+# Install system dependencies for dlib/face_recognition
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential cmake libopenblas-dev liblapack-dev libjpeg-dev \
+    build-essential \
+    cmake \
+    libopenblas-dev \
+    liblapack-dev \
+    libjpeg-dev \
+    libpng-dev \
+    libfreetype6-dev \
+    pkg-config \
     && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
 WORKDIR /app
-COPY requirements.txt .
+
+# Copy Python requirements and install dependencies
+COPY backend/requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
-COPY . .
-# Crear carpeta de datos para SQLite
-RUN mkdir -p /app/data
-EXPOSE 8081
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8081"]
 
-# ------------------------------
-# Instrucciones para construir y subir la imagen Docker:
-#
-# 1. Construir la imagen Docker:
-#    docker build -t steelerp.azurecr.io/face_recognition_backend:latest .
-#
-# 2. Iniciar sesión en tu registro Docker (por ejemplo, Docker Hub o tu propio servidor):
-#    docker login
-#
-# 3. Subir la imagen al registro:
-#    docker push steelerp.azurecr.io/face_recognition_backend:latest
-#
-# ------------------------------
+# Copy backend source code
+COPY backend/ .
+
+# Copy built frontend from stage 1
+COPY --from=frontend-builder /app/admin-panel/dist ./www/admin
+
+# Create necessary directories
+RUN mkdir -p /app/data /app/uploads /app/logs
+
+# Create non-root user for security
+RUN useradd -m -u 1000 appuser && \
+    chown -R appuser:appuser /app
+
+USER appuser
+
+# Expose port
+EXPOSE 8081
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8081/health')" || exit 1
+
+# Start the application
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8081"]
