Add dashboard and reports endpoints with corresponding services and schemas
- Implemented dashboard controller with endpoints for stats, recent activities, attendance chart, and warehouse chart.
- Created schemas for dashboard responses including statistics, recent activities, and chart data.
- Developed report schemas for generating various report types and formats.
- Added dashboard service to handle business logic for fetching stats, recent activities, attendance data, and warehouse distribution.
- Implemented tests for dashboard and reports endpoints to ensure proper authentication and structure.
- Created utility for generating reports in PDF, Excel, and CSV formats, including attendance reports and chart data visualization.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ backend/reto2.md
 backend/www/admin/**
 README.md.backup
 .github/copilot-instructions.md
+backend/ENDPOINTS_DASHBOARD_REPORTS.md
+admin-panel/openapireport.json
