Refactor dashboard and report services for improved readability and consistency
- Cleaned up whitespace and formatting in dashboard_service.py and report_service.py.
- Enhanced query structures and added comments for clarity.
- Simplified logic in various methods for better maintainability.
- Updated test cases for dashboard and reports to ensure proper authentication checks.
- Improved report generation methods to ensure consistent formatting and style.
- Added type hints and improved docstrings for better code documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ README.md.backup
 .github/copilot-instructions.md
 backend/ENDPOINTS_DASHBOARD_REPORTS.md
 admin-panel/openapireport.json
+backend/downloaded_report.pdf
+backend/test_report.csv
