feat: Update error messages in Login.vue to English and add sync.ffs_db to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ TEST_ENDPOINTS.md
 TEST_DASHBOARD_INTEGRATION.md
 test_dashboard_integration.bat
 test_dashboard_integration.sh
+sync.ffs_db
+sync.ffs_db
