feat: Implement timezone support across frontend and backend for accurate record tracking

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ test_dashboard_integration.sh
 sync.ffs_db
 sync.ffs_db
 sync.ffs_db
+FRONTEND_TIMEZONE_IMPLEMENTATION.md
+TIMEZONE_IMPLEMENTATION_SUMMARY.md
+backend/TIMEZONE_SUPPORT.md
+test.db
+backend/TIMEZONE_IMPLEMENTATION_EXAMPLES.py
