feat: Add user profile modal component and integrate it into home page for enhanced user experience

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ TIMEZONE_IMPLEMENTATION_SUMMARY.md
 backend/TIMEZONE_SUPPORT.md
 test.db
 backend/TIMEZONE_IMPLEMENTATION_EXAMPLES.py
+employee-register/requerimientos.md
